changement de menus

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_acceuil">
 
     <fragment
-        android:id="@+id/nav_home"
-        android:name="ca.ulaval.ima.residencemanager.ui.home.HomeFragment"
+        android:id="@+id/nav_acceuil"
+        android:name="ca.ulaval.ima.residencemanager.ui.profil.ProfilFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_profil" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="ca.ulaval.ima.residencemanager.ui.gallery.GalleryFragment"
+        android:id="@+id/nav_profil"
+        android:name="ca.ulaval.ima.residencemanager.ui.acceuil.AcceuilFragment"
         android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        tools:layout="@layout/fragment_acceuil" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="ca.ulaval.ima.residencemanager.ui.slideshow.SlideshowFragment"
+        android:id="@+id/nav_bail"
+        android:name="ca.ulaval.ima.residencemanager.ui.bail.BailFragment"
         android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        tools:layout="@layout/fragment_bail" />
 </navigation>
