--- a/app/src/main/res/layout/fragment_bail.xml
+++ b/app/src/main/res/layout/fragment_bail.xml
@@ -17,6 +17,58 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.784" />
+
+    <Button
+        android:id="@+id/btnSoumettre"
+        android:layout_width="211dp"
+        android:layout_height="52dp"
+        android:layout_marginBottom="72dp"
+        android:text="Soumettre"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <RadioGroup
+        android:layout_width="375dp"
+        android:layout_height="472dp"
+        android:layout_marginTop="48dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <RadioButton
+            android:id="@+id/radioButton"
+            android:layout_width="match_parent"
+            android:layout_height="68dp"
+            android:text="Libérer ma chambre au plus tard le 1er mai 2024 et ne pas reconduire pour l'automne 2024 et l'hiver 2025" />
+
+        <RadioButton
+            android:id="@+id/radioButton2"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:text="Libérer ma chambre au plus tard le 1er mai 2024 et reconduire pour l'automne 2024 et l'hiver 2025" />
+
+        <RadioButton
+            android:id="@+id/radioButton3"
+            android:layout_width="match_parent"
+            android:layout_height="88dp"
+            android:text="Prendre une entente de location estivale à compter du 1er mai 2024 pour une partie de l’été 2024 et ne pas reconduire pour l’automne 2024 et l’hiver 2025" />
+
+        <RadioButton
+            android:id="@+id/radioButton4"
+            android:layout_width="match_parent"
+            android:layout_height="101dp"
+            android:text="Prendre une entente de location estivale à compter du 1er mai 2024 pour une partie de l’été 2024 et reconduire pour l’automne 2024 et l’hiver 2025" />
+
+        <RadioButton
+            android:id="@+id/radioButton5"
+            android:layout_width="match_parent"
+            android:layout_height="98dp"
+            android:text="Libérer ma chambre au plus tard le 1er mai 2024 pour tout l'été 2024 et ne pas reconduire pour l'automne 2024 et l'hiver 2025" />
+    </RadioGroup>
 </androidx.constraintlayout.widget.ConstraintLayout>
