--- a/app/src/main/res/layout/fragment_profil.xml
+++ b/app/src/main/res/layout/fragment_profil.xml
@@ -28,7 +28,7 @@
                 app:layout_constraintHorizontal_bias="0.496"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.272">
+                app:layout_constraintVertical_bias="0.227">
 
 
             </View>
@@ -47,14 +47,16 @@
 
             <ImageView
                 android:id="@+id/profileImage"
-                android:layout_width="238dp"
-                android:layout_height="204dp"
+                android:layout_width="255dp"
+                android:layout_height="235dp"
                 android:scaleType="fitXY"
                 android:src="@drawable/ic_profile"
                 app:layout_constraintBottom_toBottomOf="@+id/view"
                 app:layout_constraintEnd_toEndOf="@+id/view"
+                app:layout_constraintHorizontal_bias="0.545"
                 app:layout_constraintStart_toStartOf="@+id/view"
-                app:layout_constraintTop_toTopOf="@+id/view" />
+                app:layout_constraintTop_toTopOf="@+id/view"
+                app:layout_constraintVertical_bias="0.0" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </FrameLayout>
