--- a/app/src/main/res/layout/fragment_market.xml
+++ b/app/src/main/res/layout/fragment_market.xml
@@ -6,35 +6,35 @@
     tools:context=".ui.market.Market"
     android:orientation="vertical">
 
-
-    <TextView
-        android:id="@+id/texte_1"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="    Le Moins Cher  pour
-        les Etudiants en residence"
-        android:textColor="@color/red"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        tools:ignore="MissingConstraints" />
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="172dp"
+            android:layout_height="wrap_content"
+            android:text="mes Annobes" />
+
+        <Button
+            android:id="@+id/btn_ajouter_articl"
+            android:layout_width="203dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="Ajouter" />
+    </LinearLayout>
 
     <ListView
         android:id="@+id/list_view_annonces"
         android:layout_width="match_parent"
-        android:layout_height="539dp"
+        android:layout_height="27dp"
         android:layout_weight="1"
         android:background="#D3D3D3"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="-16dp"
         tools:layout_editor_absoluteY="233dp" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="203dp"
-        android:layout_height="71dp"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/baseline_control_point_24"
-        android:text="Button" />
 
 
 </LinearLayout>
