--- a/app/src/main/res/layout/fragment_profil.xml
+++ b/app/src/main/res/layout/fragment_profil.xml
@@ -7,6 +7,7 @@
     tools:context=".ui.profil.ProfilFragment">
 
     <FrameLayout
+        android:id="@+id/frameLayout"
         android:layout_width="match_parent"
         android:layout_height="350dp"
         android:background="@drawable/background_image"
@@ -22,11 +23,11 @@
                 android:id="@+id/text_user"
                 android:layout_width="409dp"
                 android:layout_height="44dp"
+                android:gravity="center"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:gravity="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/profileImage" />
@@ -36,8 +37,8 @@
                 android:layout_width="254dp"
                 android:layout_height="254dp"
                 android:src="@drawable/ic_profile"
-                app:civ_border_width="2dp"
                 app:civ_border_color="#FFC0C0C0"
+                app:civ_border_width="2dp"
                 app:layout_constraintBottom_toTopOf="@+id/text_user"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -47,16 +48,49 @@
                 android:id="@+id/cameraBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:clickable="true"
-                android:src="@drawable/ic_menu_camera"
                 android:backgroundTint="@color/silver"
+                android:clickable="true"
+                android:focusable="true"
+                android:src="@drawable/ic_menu_camera"
                 app:layout_constraintBottom_toTopOf="@+id/text_user"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:focusable="true" />
+                app:layout_constraintStart_toStartOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </FrameLayout>
+
+    <TextView
+        android:id="@+id/numChambre"
+        android:layout_width="220dp"
+        android:layout_height="46dp"
+        android:paddingTop="10dp"
+        android:text="Text"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/emailText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
+        app:layout_constraintVertical_bias="0.741" />
+
+    <TextView
+        android:id="@+id/emailText"
+        android:layout_width="wrap_content"
+        android:layout_height="49dp"
+        android:layout_marginBottom="148dp"
+        android:paddingTop="10dp"
+        android:text=""
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
