--- a/app/src/main/res/layout/item_market_delet.xml
+++ b/app/src/main/res/layout/item_market_delet.xml
@@ -17,7 +17,7 @@
 
     <LinearLayout
         android:layout_width="116dp"
-        android:layout_height="159dp"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <ImageView
@@ -35,11 +35,18 @@
             android:layout_height="wrap_content"
             android:layout_weight="13"
             android:text="" />
+
+        <Button
+            android:id="@+id/button_delete"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="13"
+            android:text="Button" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="277dp"
-        android:layout_height="154dp"
+        android:layout_height="200dp"
         android:orientation="vertical">
 
         <TextView
