--- a/app/src/main/res/layout/activity_add_articlein.xml
+++ b/app/src/main/res/layout/activity_add_articlein.xml
@@ -6,144 +6,172 @@
     android:layout_height="match_parent"
     tools:context=".ui.market.AddArticleinActivity">
 
-
-    <EditText
-        android:id="@+id/text_produit"
-        android:layout_width="363dp"
-        android:layout_height="61dp"
-        android:layout_marginTop="4dp"
-
-        android:text=""
-        android:textColor="#000000"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.666"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/prenomTexte" />
-
-    <TextView
-        android:id="@+id/prenomTexte"
+    <ScrollView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="36dp"
-        android:text="Nom Produit : "
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.124"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="0dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
-    <TextView
-        android:id="@+id/nomTexte"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="32dp"
-        android:text="Telephone : "
-        android:textColor="#000000"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.113"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_produit" />
-
-
-    <EditText
-        android:id="@+id/text_telephoneVendeur"
-        android:layout_width="362dp"
-        android:layout_height="63dp"
-        android:layout_below="@id/text_produit"
-        android:layout_marginTop="4dp"
-        android:text=" "
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.653"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nomTexte" />
-
-    <TextView
-        android:id="@+id/DateNaissanceTexte"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="12dp"
-        android:text="Prix du produit"
-        android:textColor="#000000"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="@+id/text_prix"
-        app:layout_constraintHorizontal_bias="0.134"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_telephoneVendeur" />
-
-    <EditText
-        android:id="@+id/text_prix"
-        android:layout_width="362dp"
-        android:layout_height="63dp"
-        android:layout_below="@id/text_produit"
-        android:layout_marginTop="8dp"
-        android:text=" "
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.653"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/DateNaissanceTexte" />
-
-    <TextView
-        android:id="@+id/sexeTexte"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:text="Discutable : "
-        android:textColor="#000000"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="@+id/radioGroupSexe"
-        app:layout_constraintHorizontal_bias="0.127"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_prix" />
-
-    <RadioGroup
-        android:id="@+id/radioGroupSexe"
-        android:layout_width="363dp"
-        android:layout_height="74dp"
-        android:layout_below="@id/text_prix"
-        android:layout_marginTop="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.708"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sexeTexte"
-        tools:ignore="MissingConstraints">
-
-        <RadioButton
-            android:id="@+id/radioHomme"
-            android:layout_width="103dp"
-            android:layout_height="32dp"
-            android:checked="true"
-            android:text="NON"
-            tools:layout_editor_absoluteX="35dp"
-            tools:layout_editor_absoluteY="422dp" />
-
-        <RadioButton
-            android:id="@+id/radioFemme"
-            android:layout_width="103dp"
+        <LinearLayout
+            android:id="@+id/linear"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="OUi"
-            tools:layout_editor_absoluteX="35dp"
-            tools:layout_editor_absoluteY="470dp" />
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
-    </RadioGroup>
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="373dp"
+                android:layout_height="253dp"
+                android:scaleType="fitXY"
+                app:srcCompat="@drawable/ic_photo_black_48dp" />
 
-    <Button
-        android:id="@+id/btnSoumettre"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+            <TextView
+                android:id="@+id/prenomTexte"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="13dp"
+                android:text="Nom Produit : "
+                android:textSize="24sp"
+                android:textColor="@color/black"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.124"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        android:layout_marginTop="32dp"
-        android:background="#A9A9A9"
-        android:onClick="submitForm"
-        android:text="Soumettre"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroupSexe" />
+            <EditText
+                android:id="@+id/text_produit"
+                android:layout_width="match_parent"
+                android:layout_height="61dp"
+                android:layout_marginTop="4dp"
+                android:text=""
+                android:textColor="#000000"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.666"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/prenomTexte" />
 
+            <TextView
+                android:id="@+id/nomTexte"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="32dp"
+                android:text="Telephone : "
+                android:textColor="#000000"
+                android:textSize="24sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.113"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/text_produit" />
+
+
+            <EditText
+                android:id="@+id/text_telephoneVendeur"
+                android:layout_width="383dp"
+                android:layout_height="63dp"
+                android:layout_below="@id/text_produit"
+                android:layout_marginTop="4dp"
+                android:text=""
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.653"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/nomTexte" />
+
+            <TextView
+                android:id="@+id/DateNaissanceTexte"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="12dp"
+                android:text="Prix du produit"
+                android:textColor="#000000"
+                android:textSize="24sp"
+                app:layout_constraintEnd_toEndOf="@+id/text_prix"
+                app:layout_constraintHorizontal_bias="0.134"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/text_telephoneVendeur" />
+
+            <EditText
+                android:id="@+id/text_prix"
+                android:layout_width="395dp"
+                android:layout_height="63dp"
+                android:layout_below="@id/text_produit"
+                android:layout_marginTop="8dp"
+                android:text=""
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.653"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/DateNaissanceTexte" />
+
+            <TextView
+                android:id="@+id/sexeTexte"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="16dp"
+                android:text="Discutable : "
+                android:textColor="#000000"
+                android:textSize="24sp"
+                app:layout_constraintEnd_toEndOf="@+id/radioGroupSexe"
+                app:layout_constraintHorizontal_bias="0.127"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/text_prix" />
+
+            <RadioGroup
+                android:id="@+id/radioGroupSexe"
+                android:layout_width="363dp"
+                android:layout_height="74dp"
+                android:layout_below="@id/text_prix"
+                android:layout_marginTop="4dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.708"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/sexeTexte"
+                tools:ignore="MissingConstraints">
+
+                <RadioButton
+                    android:id="@+id/radioHomme"
+                    android:layout_width="103dp"
+                    android:layout_height="32dp"
+                    android:checked="true"
+                    android:text="NON"
+                    tools:layout_editor_absoluteX="35dp"
+                    tools:layout_editor_absoluteY="422dp" />
+
+                <RadioButton
+                    android:id="@+id/radioFemme"
+                    android:layout_width="103dp"
+                    android:layout_height="wrap_content"
+                    android:text="OUi"
+                    tools:layout_editor_absoluteX="35dp"
+                    tools:layout_editor_absoluteY="470dp" />
+
+            </RadioGroup>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/btnSoumettre"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginStart="62dp"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginEnd="101dp"
+                    android:layout_marginBottom="39dp"
+                    android:background="#A9A9A9"
+                    android:onClick="submitForm"
+                    android:text="Soumettre" />
+            </RelativeLayout>
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
