--- a/app/src/main/res/layout/fragment_bail.xml
+++ b/app/src/main/res/layout/fragment_bail.xml
@@ -28,6 +28,7 @@
         android:layout_height="52dp"
         android:layout_marginBottom="72dp"
         android:text="Soumettre"
+        android:backgroundTint="@color/red"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
