--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FFFF0000</color>
+    <color name="dark_red">#550202</color>
     <color name="gray">#FF8D8D8D</color>
     <color name="gray_clear">#FF7E7E7E</color>
     <color name="silver">#FFC0C0C0</color>
