--- a/app/src/main/res/layout/fragment_panne.xml
+++ b/app/src/main/res/layout/fragment_panne.xml
@@ -1,13 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ui.panne.PanneFragment">
 
-    <TextView
-        android:id="@+id/textPanne"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 
-</FrameLayout>
+    <Button
+        android:id="@+id/btn_ajouter_panne"
+        android:layout_width="203dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="Ajouter Panne "
+        android:backgroundTint="@color/red"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="32dp" />
+
+    <ListView
+        android:id="@+id/list_view_panne"
+        android:layout_width="match_parent"
+        android:layout_height="27dp"
+        android:layout_weight="1"
+        tools:layout_editor_absoluteX="-16dp"
+        tools:layout_editor_absoluteY="233dp" />
+
+
+</LinearLayout>
