--- a/app/src/main/res/layout/fragment_bail.xml
+++ b/app/src/main/res/layout/fragment_bail.xml
@@ -35,6 +35,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <RadioGroup
+        android:id="@+id/radioGroupBail"
         android:layout_width="375dp"
         android:layout_height="472dp"
         android:layout_marginTop="48dp"
