--- a/app/src/main/res/layout/fragment_geolocalisation.xml
+++ b/app/src/main/res/layout/fragment_geolocalisation.xml
@@ -26,7 +26,8 @@
         android:id="@+id/button_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Get Location" />
+        android:backgroundTint="@color/red"
+        android:text="Ma position" />
 
 
 </LinearLayout>
